--- a/events.html
+++ b/events.html
@@ -1,67 +1,37 @@
 <!doctype html>
 <html lang="ar" dir="rtl" data-theme="light">
 <head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <meta charset="utf-8"/><meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>الفعاليات – مجلس طلاب خطوة</title>
   <meta name="description" content="فعاليات مجلس طلاب خطوة في ملبورن: ورش، بطولات، ملتقيات."/>
   <meta name="theme-color" content="#1e40af"/>
   <style>
     :root{--primary:#1e40af;--primary-600:#1d4ed8;--bg:#fff;--text:#0f172a;--muted:#6b7280;--ring:#e5e7eb;--card:#f8fafc;--accent-red:#d41c0f;--accent-green:#00703c}
-    *{box-sizing:border-box}html,body{height:100%}
-    body{margin:0;font-family:"Segoe UI",system-ui,-apple-system,Tahoma,Arial,sans-serif;background:var(--bg);color:var(--text);line-height:1.6}
-    a{color:inherit;text-decoration:none} img{max-width:100%;height:auto;display:block}
-    .container{width:min(1120px,92%);margin-inline:auto}
-
-    /* Navbar */
+    *{box-sizing:border-box}html,body{height:100%}body{margin:0;font-family:"Segoe UI",system-ui,-apple-system,Tahoma,Arial,sans-serif;background:var(--bg);color:var(--text);line-height:1.6}
+    a{color:inherit;text-decoration:none}img{max-width:100%;height:auto;display:block}.container{width:min(1120px,92%);margin-inline:auto}
     .navbar{position:sticky;top:0;z-index:40;background:rgba(255,255,255,.85);backdrop-filter:saturate(180%) blur(8px);border-bottom:1px solid var(--ring)}
-    .nav-inner{display:flex;align-items:center;justify-content:space-between;gap:1rem;padding:.8rem 0}
-    .brand{display:flex;align-items:center;gap:.8rem;font-weight:700;font-size:1.05rem}
-    .brand .flag{width:18px;height:18px;border-radius:4px;overflow:hidden;display:inline-grid;grid-template-columns:1fr 1fr 1fr;border:2px solid #000;box-shadow:0 0 0 1px #000 inset}
+    .nav-inner{display:flex;align-items:center;justify-content:space-between;padding:.8rem 0}
+    .brand{display:flex;align-items:center;gap:.8rem;font-weight:700}.brand .flag{width:18px;height:18px;border-radius:4px;overflow:hidden;display:inline-grid;grid-template-columns:1fr 1fr 1fr;border:2px solid #000;box-shadow:0 0 0 1px #000 inset}
     .flag .red{background:var(--accent-red)} .flag .green{background:var(--accent-green)} .flag .black{background:#000}
-    .nav-links{display:flex;gap:1rem;align-items:center}
-    .nav-links a{padding:.5rem .75rem;border-radius:10px;font-weight:600}
-    .nav-links a:hover{background:var(--card)}
-    .nav-cta{padding:.55rem .9rem;border-radius:12px;background:var(--primary);color:#fff !important}
+    .nav-links{display:flex;gap:1rem;align-items:center}.nav-links a{padding:.5rem .75rem;border-radius:10px;font-weight:600}.nav-links a:hover{background:var(--card)}
+    .nav-cta{padding:.55rem .9rem;border-radius:12px;background:var(--primary);color:#fff!important}
     .menu-toggle{display:none;border:1px solid var(--ring);padding:.5rem .7rem;border-radius:10px;background:#fff}
-    @media(max-width:860px){
-      .menu-toggle{display:inline-flex}
-      .nav-links{display:none;position:absolute;right:4%;left:4%;top:64px;flex-direction:column;padding:.75rem;background:#fff;border:1px solid var(--ring);border-radius:14px;box-shadow:0 10px 30px rgba(0,0,0,.06)}
-      .nav-links.open{display:flex}
-      .nav-links a{width:100%}
-    }
-
-    /* Header */
-    header.hero{background:linear-gradient(180deg,#ffffff 0%,#f5f7ff 100%);border-bottom:1px solid var(--ring)}
-    .hero-inner{padding:2.6rem 0;display:grid;gap:1rem}
-    .hero h1{margin:0 0 .4rem;font-size:clamp(1.5rem,2vw + 1rem,2.2rem)}
-    .muted{color:var(--muted)}
-
-    /* Sections */
-    section{padding:2rem 0}
-    .grid{display:grid;gap:1rem}
-    .grid-3{grid-template-columns:repeat(3,1fr)}
-    @media(max-width:980px){.grid-3{grid-template-columns:1fr}}
+    @media(max-width:860px){.menu-toggle{display:inline-flex}.nav-links{display:none;position:absolute;right:4%;left:4%;top:64px;flex-direction:column;padding:.75rem;background:#fff;border:1px solid var(--ring);border-radius:14px;box-shadow:0 10px 30px rgba(0,0,0,.06)}.nav-links.open{display:flex}.nav-links a{width:100%}}
+    header.hero{background:linear-gradient(180deg,#ffffff 0%,#f5f7ff 100%);border-bottom:1px solid var(--ring)}.hero-inner{padding:2.6rem 0}
+    .hero h1{margin:0 0 .4rem;font-size:clamp(1.5rem,2vw + 1rem,2.2rem)}.muted{color:var(--muted)}
+    section{padding:2rem 0}.grid{display:grid;gap:1rem}.grid-3{grid-template-columns:repeat(3,1fr)}@media(max-width:980px){.grid-3{grid-template-columns:1fr}}
     .card{background:#fff;border:1px solid var(--ring);border-radius:16px;padding:1rem;display:grid;gap:.5rem}
-
-    /* Footer */
-    footer{border-top:1px solid var(--ring);background:#fff}
-    .foot{display:grid;grid-template-columns:1.2fr 1fr;gap:1rem;padding:1.4rem 0}
-    @media(max-width:860px){.foot{grid-template-columns:1fr}}
+    footer{border-top:1px solid var(--ring);background:#fff}.foot{display:grid;grid-template-columns:1.2fr 1fr;gap:1rem;padding:1.4rem 0}@media(max-width:860px){.foot{grid-template-columns:1fr}}
   </style>
 </head>
 <body>
-  <!-- Navbar -->
   <nav class="navbar" aria-label="الشريط العلوي">
     <div class="container nav-inner">
-      <a class="brand" href="/index.html" aria-label="العودة للرئيسية">
-        <span class="flag" aria-hidden="true"><span class="red"></span><span class="green"></span><span class="black"></span></span>
-        <span>مجلس طلاب خطوة – La Trobe</span>
-      </a>
+      <a class="brand" href="/index.html"><span class="flag" aria-hidden="true"><span class="red"></span><span class="green"></span><span class="black"></span></span><span>مجلس طلاب خطوة – La Trobe</span></a>
       <button id="menuBtn" class="menu-toggle" aria-expanded="false" aria-controls="primary-menu">القائمة</button>
       <div id="primary-menu" class="nav-links" role="menubar">
-        <a href="/index.html#about" role="menuitem">من نحن</a>
-        <a href="/index.html#news" role="menuitem">الأخبار</a>
+        <a href="/about.html" role="menuitem">من نحن</a>
+        <a href="/news.html" role="menuitem">الأخبار</a>
         <a href="/events.html" aria-current="page" role="menuitem">الفعاليات</a>
         <a href="/contact.html" role="menuitem">تواصل</a>
         <a href="/index.html#join" class="nav-cta" role="menuitem">انضم للمجلس</a>
@@ -69,35 +39,17 @@
     </div>
   </nav>
 
-  <!-- Header -->
   <header class="hero">
-    <div class="container hero-inner">
-      <div>
-        <h1>الفعاليات</h1>
-        <p class="muted">هذه الصفحة تعرض أحدث الفعاليات. سنضيف التسجيل والتقويم لاحقًا خطوة بخطوة.</p>
-      </div>
-    </div>
+    <div class="container hero-inner"><h1>الفعاليات</h1><p class="muted">قائمة الفعاليات القادمة، وسيُضاف التسجيل لاحقًا.</p></div>
   </header>
 
   <main>
     <section>
       <div class="container">
         <div class="grid grid-3">
-          <article class="card">
-            <span class="muted">رياضة • 20 أغسطس 2025</span>
-            <h3>بطولة البادل</h3>
-            <p class="muted">تنظيم رياضي طلابي. تفاصيل التسجيل تُنشر قريبًا.</p>
-          </article>
-          <article class="card">
-            <span class="muted">اجتماعي • 28 أغسطس 2025</span>
-            <h3>ملتقى تعريفي بالمجلس</h3>
-            <p class="muted">تعريف بالمجلس وخطة الفصل، مع فقرة أسئلة وأجوبة.</p>
-          </article>
-          <article class="card">
-            <span class="muted">أكاديمي • 25 أغسطس 2025</span>
-            <h3>ورشة تخصصات خطوة</h3>
-            <p class="muted">IT، الأمن السيبراني، العلوم الحيوية، وإدارة الأعمال.</p>
-          </article>
+          <article class="card"><span class="muted">رياضة • 20 أغسطس 2025</span><h3>بطولة البادل</h3><p class="muted">تنظيم رياضي طلابي. تفاصيل التسجيل قريبًا.</p></article>
+          <article class="card"><span class="muted">اجتماعي • 28 أغسطس 2025</span><h3>ملتقى تعريفي</h3><p class="muted">تعريف بالمجلس وخطة الفصل وفقرة أسئلة وأجوبة.</p></article>
+          <article class="card"><span class="muted">أكاديمي • 25 أغسطس 2025</span><h3>ورشة تخصصات خطوة</h3><p class="muted">IT، الأمن السيبراني، العلوم الحيوية، وإدارة الأعمال.</p></article>
         </div>
       </div>
     </section>
@@ -105,18 +57,13 @@
 
   <footer aria-label="تذييل الموقع">
     <div class="container foot">
-      <div>
-        <strong>مجلس طلاب خطوة – La Trobe</strong>
-        <p class="muted" style="margin:.4rem 0 0">© <span id="year"></span> جميع الحقوق محفوظة</p>
-      </div>
+      <div><strong>مجلس طلاب خطوة – La Trobe</strong><p class="muted" style="margin:.4rem 0 0">© <span id="year"></span> جميع الحقوق محفوظة</p></div>
       <div class="muted" style="align-self:end;text-align:end">بريد: khotwaaustralia@gmail.com</div>
     </div>
   </footer>
 
   <script>
-    // Navbar toggle + السنة
-    const btn=document.getElementById('menuBtn');
-    const menu=document.getElementById('primary-menu');
+    const btn=document.getElementById('menuBtn'),menu=document.getElementById('primary-menu');
     btn?.addEventListener('click',()=>{const o=menu.classList.toggle('open');btn.setAttribute('aria-expanded',String(o));});
     document.getElementById('year').textContent=new Date().getFullYear();
   </script>
