--- a/index.html
+++ b/index.html
@@ -6,87 +6,61 @@
   <title>مجلس طلاب خطوة – La Trobe</title>
   <meta name="description" content="مجلس طلاب خطوة يمثل طلاب برنامج خطوة في جامعة لا تروب – ملبورن. فعاليات، أخبار، وانضمام للمجلس.">
   <meta name="theme-color" content="#1e40af">
-  <!-- Open Graph -->
-  <meta property="og:title" content="مجلس طلاب خطوة – La Trobe">
-  <meta property="og:description" content="فعاليات وأخبار المجلس وانضمام الأعضاء.">
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="https://khotwastudentcouncil.com/">
   <style>
-    :root { --primary:#1e40af; --primary-600:#1d4ed8; --bg:#fff; --text:#0f172a; --muted:#6b7280; --ring:#e5e7eb; --card:#f8fafc; --accent-red:#d41c0f; --accent-green:#00703c }
-    *{box-sizing:border-box} html,body{height:100%}
+    :root{--primary:#1e40af;--primary-600:#1d4ed8;--bg:#fff;--text:#0f172a;--muted:#6b7280;--ring:#e5e7eb;--card:#f8fafc;--accent-red:#d41c0f;--accent-green:#00703c}
+    *{box-sizing:border-box}html,body{height:100%}
     body{margin:0;font-family:"Segoe UI",system-ui,-apple-system,Tahoma,Arial,sans-serif;background:var(--bg);color:var(--text);line-height:1.6}
-    a{color:inherit;text-decoration:none} img{max-width:100%;height:auto;display:block}
+    a{color:inherit;text-decoration:none}img{max-width:100%;height:auto;display:block}
     .container{width:min(1120px,92%);margin-inline:auto}
-    /* Navbar */
     .navbar{position:sticky;top:0;z-index:50;background:rgba(255,255,255,.85);backdrop-filter:saturate(180%) blur(8px);border-bottom:1px solid var(--ring)}
     .nav-inner{display:flex;align-items:center;justify-content:space-between;gap:1rem;padding:.8rem 0}
     .brand{display:flex;align-items:center;gap:.8rem;font-weight:700;font-size:1.05rem}
-    .brand .flag{width:18px;height:18px;border-radius:4px;overflow:hidden;display:inline-grid;grid-template-columns:1fr 1fr 1fr;border:2px solid #000;box-shadow:0 0 0 1px #000 inset}
-    .flag .red{background:var(--accent-red)} .flag .green{background:var(--accent-green)} .flag .black{background:#000}
+    .brand .logo{width:28px;height:28px;object-fit:cover;border-radius:6px;display:block}
     .nav-links{display:flex;gap:1rem;align-items:center}
     .nav-links a{padding:.5rem .75rem;border-radius:10px;font-weight:600}
     .nav-links a:hover{background:var(--card)}
-    .nav-cta{padding:.55rem .9rem;border-radius:12px;background:var(--primary);color:#fff !important;box-shadow:0 4px 18px rgba(29,78,216,.18)}
+    .nav-cta{padding:.55rem .9rem;border-radius:12px;background:var(--primary);color:#fff!important;box-shadow:0 4px 18px rgba(29,78,216,.18)}
     .nav-cta:hover{background:var(--primary-600)}
     .menu-toggle{display:none;border:1px solid var(--ring);padding:.5rem .7rem;border-radius:10px;background:#fff}
-    @media (max-width:860px){
-      .menu-toggle{display:inline-flex}
-      .nav-links{display:none;position:absolute;right:4%;left:4%;top:64px;flex-direction:column;padding:.75rem;background:#fff;border:1px solid var(--ring);border-radius:14px;box-shadow:0 10px 30px rgba(0,0,0,.06)}
-      .nav-links.open{display:flex}
-      .nav-links a{width:100%}
-    }
-    /* Hero */
-    .hero{background: radial-gradient(1200px 400px at 80% -20%, rgba(29,78,216,.10), transparent 60%), linear-gradient(180deg,#fff 0%,#f5f7ff 100%); border-bottom:1px solid var(--ring)}
+    @media(max-width:860px){.menu-toggle{display:inline-flex}.nav-links{display:none;position:absolute;right:4%;left:4%;top:64px;flex-direction:column;padding:.75rem;background:#fff;border:1px solid var(--ring);border-radius:14px;box-shadow:0 10px 30px rgba(0,0,0,.06)}.nav-links.open{display:flex}.nav-links a{width:100%}}
+    header.hero{background:radial-gradient(1200px 400px at 80% -20%, rgba(29,78,216,.10), transparent 60%),linear-gradient(180deg,#fff 0%,#f5f7ff 100%);border-bottom:1px solid var(--ring)}
     .hero-inner{display:grid;grid-template-columns:1.2fr 1fr;gap:2rem;padding:3.2rem 0;align-items:center}
-    .hero h1{font-size:clamp(1.6rem,2.6vw + 1rem,2.4rem);margin:0 0 .6rem}
-    .hero p{color:var(--muted);margin:0 0 1.2rem}
+    .hero h1{font-size:clamp(1.6rem,2.6vw+1rem,2.4rem);margin:0 0 .6rem}.hero p{color:var(--muted);margin:0 0 1.2rem}
     .cta-row{display:flex;gap:.8rem;flex-wrap:wrap}
     .btn{display:inline-flex;align-items:center;justify-content:center;gap:.5rem;padding:.9rem 1.1rem;border-radius:14px;font-weight:700;border:1px solid transparent;cursor:pointer}
-    .btn-primary{background:var(--primary);color:#fff;box-shadow:0 10px 28px rgba(29,78,216,.22)}
-    .btn-primary:hover{background:var(--primary-600)}
+    .btn-primary{background:var(--primary);color:#fff;box-shadow:0 10px 28px rgba(29,78,216,.22)}.btn-primary:hover{background:var(--primary-600)}
     .btn-outline{background:#fff;border-color:var(--ring)}
     .hero-card{background:#fff;border:1px solid var(--ring);border-radius:18px;padding:1rem;display:grid;grid-template-columns:64px 1fr;gap:.9rem;box-shadow:0 12px 30px rgba(2,6,23,.06)}
-    .hero-card .badge{font-weight:800;font-size:.78rem;color:#fff;background:linear-gradient(135deg,var(--accent-green),var(--accent-red));padding:.45rem .6rem;border-radius:10px;text-align:center;display:grid;place-items:center}
-    @media (max-width:980px){.hero-inner{grid-template-columns:1fr}}
-    /* Sections */
-    section{padding:2.6rem 0}
-    .section-head{display:flex;align-items:end;justify-content:space-between;gap:1rem;margin-bottom:1.2rem}
-    .section-head h2{margin:0;font-size:1.4rem}
-    .muted{color:var(--muted);font-size:.95rem}
-    .grid{display:grid;gap:1rem}
-    .grid-3{grid-template-columns:repeat(3,1fr)}
-    .grid-2{grid-template-columns:repeat(2,1fr)}
-    @media (max-width:980px){.grid-3{grid-template-columns:1fr}.grid-2{grid-template-columns:1fr}}
+    .hero-card .badge{font-weight:800;font-size:.78rem;color:#fff;background:linear-gradient(135deg,var(--accent-green),var(--accent-red));padding:.45rem .6rem;border-radius:10px;display:grid;place-items:center}
+    @media(max-width:980px){.hero-inner{grid-template-columns:1fr}}
+    section{padding:2.6rem 0}.section-head{display:flex;align-items:end;justify-content:space-between;gap:1rem;margin-bottom:1.2rem}
+    .section-head h2{margin:0;font-size:1.4rem}.muted{color:var(--muted);font-size:.95rem}
+    .grid{display:grid;gap:1rem}.grid-3{grid-template-columns:repeat(3,1fr)}.grid-2{grid-template-columns:repeat(2,1fr)}
+    @media(max-width:980px){.grid-3{grid-template-columns:1fr}.grid-2{grid-template-columns:1fr}}
     .card{background:#fff;border:1px solid var(--ring);border-radius:16px;padding:1rem;display:grid;gap:.6rem}
-    .chip{display:inline-block;font-size:.78rem;padding:.25rem .55rem;border-radius:999px;background:var(--card);border:1px solid var(--ring)}
-    /* Footer */
-    footer{border-top:1px solid var(--ring);background:#fff}
-    .foot{display:grid;grid-template-columns:1.2fr 1fr;gap:1rem;padding:1.4rem 0}
-    .social{display:flex;gap:.8rem}
-    .social a{padding:.4rem .6rem;border:1px solid var(--ring);border-radius:10px}
-    @media (max-width:860px){.foot{grid-template-columns:1fr}}
+    footer{border-top:1px solid var(--ring);background:#fff}.foot{display:grid;grid-template-columns:1.2fr 1fr;gap:1rem;padding:1.4rem 0}
+    .social{display:flex;gap:.8rem}@media(max-width:860px){.foot{grid-template-columns:1fr}}
   </style>
 </head>
 <body>
-  <!-- Navbar -->
   <nav class="navbar" aria-label="الشريط العلوي">
     <div class="container nav-inner">
       <a class="brand" href="/index.html" aria-label="العودة للرئيسية">
-        <span class="flag" aria-hidden="true"><span class="red"></span><span class="green"></span><span class="black"></span></span>
+        <img src="https://g.top4top.io/p_3516rfttb1.jpg" alt="شعار مجلس طلاب خطوة" class="logo" width="28" height="28" decoding="async">
         <span>مجلس طلاب خطوة – La Trobe</span>
       </a>
       <button id="menuBtn" class="menu-toggle" aria-expanded="false" aria-controls="primary-menu">القائمة</button>
       <div id="primary-menu" class="nav-links" role="menubar">
-        <a href="/about.html" role="menuitem">من نحن</a>
-        <a href="/news.html" role="menuitem">الأخبار</a>
-        <a href="/events.html" role="menuitem">الفعاليات</a>
-        <a href="/contact.html" role="menuitem">تواصل</a>
-        <a href="/index.html#join" class="nav-cta" role="menuitem">انضم للمجلس</a>
+        <a href="/about.html">من نحن</a>
+        <a href="/news.html">الأخبار</a>
+        <a href="/events.html">الفعاليات</a>
+        <a href="/calendar.html">التقويم</a>
+        <a href="/contact.html">تواصل</a>
+        <a href="#join" class="nav-cta">انضم للمجلس</a>
       </div>
     </div>
   </nav>
 
-  <!-- Hero -->
   <header id="home" class="hero">
     <div class="container hero-inner">
       <div>
@@ -99,38 +73,35 @@
       </div>
       <div class="hero-card" aria-label="نبذة سريعة">
         <div class="badge">جديد</div>
-        <div><strong>إطلاق المجلس – ملبورن</strong><p class="muted" style="margin:.2rem 0 0">نرتّب أول ملتقى رسمي لطلاب خطوة. تابع الأخبار والفعاليات القادمة هنا.</p></div>
+        <div><strong>إطلاق المجلس – ملبورن</strong><p class="muted" style="margin:.2rem 0 0">تابع الأخبار والفعاليات القادمة هنا.</p></div>
       </div>
     </div>
   </header>
 
   <main>
-    <!-- About (مختصر) -->
     <section id="about" aria-labelledby="about-h">
       <div class="container">
         <div class="section-head"><h2 id="about-h">من نحن</h2><span class="muted">تعريف مختصر بالمجلس</span></div>
         <div class="grid grid-2">
           <article class="card"><h3>الرؤية</h3><p>أن يكون المجلس فعّالًا في دعم العملية التعليمية والمساهمة في خدمة المجتمع الجامعي.</p></article>
-          <article class="card"><h3>الرسالة</h3><p>دعم الطلاب في الأنشطة التعليمية وغير التعليمية وتعزيز العلاقة بين الطلاب والإدارة الجامعية.</p></article>
+          <article class="card"><h3>الرسالة</h3><p>دعم الطلاب في الأنشطة التعليمية وغير التعليمية وتعزيز العلاقة بين الطلاب والإدارة.</p></article>
           <article class="card"><h3>الأهداف</h3><p>التمثيل، تطوير القيادة، التفاعل المجتمعي، والدعوة.</p></article>
-          <article class="card"><h3>التنظيم</h3><p>رئيس ونائب رئيس، قائد فريق، منسقو الأنشطة والإعلام.</p></article>
+          <article class="card"><h3>التنظيم</h3><p>رئيس ونائب، قادة فرق، منسقو الأنشطة والإعلام.</p></article>
         </div>
       </div>
     </section>
 
-    <!-- News (مختصر مع زر) -->
     <section id="news" aria-labelledby="news-h">
       <div class="container">
         <div class="section-head"><h2 id="news-h">الأخبار</h2><a class="muted" href="/news.html">كل الأخبار</a></div>
         <div class="grid grid-3">
-          <article class="card"><span class="chip">إعلان</span><h3>فتح باب الانضمام</h3><p class="muted">انضم للفِرق التنظيمية القادمة.</p></article>
-          <article class="card"><span class="chip">فعاليات</span><h3>ملتقى تعريفي</h3><p class="muted">لقاء وخطة الفصل مع أسئلة وأجوبة.</p></article>
-          <article class="card"><span class="chip">شراكات</span><h3>تعاونات أكاديمية</h3><p class="muted">ورش وأنشطة نوعية.</p></article>
+          <article class="card"><span class="muted">إعلان</span><h3>فتح باب الانضمام</h3><p class="muted">انضم للفِرق التنظيمية القادمة.</p></article>
+          <article class="card"><span class="muted">فعاليات</span><h3>ملتقى تعريفي</h3><p class="muted">لقاء وخطة الفصل مع أسئلة وأجوبة.</p></article>
+          <article class="card"><span class="muted">شراكات</span><h3>تعاونات أكاديمية</h3><p class="muted">ورش وأنشطة نوعية.</p></article>
         </div>
       </div>
     </section>
 
-    <!-- Events preview -->
     <section id="events" aria-labelledby="events-h">
       <div class="container">
         <div class="section-head"><h2 id="events-h">الفعاليات القادمة</h2><a class="muted" href="/events.html">تقويم الفعاليات</a></div>
@@ -142,10 +113,9 @@
       </div>
     </section>
 
-    <!-- Join -->
     <section id="join" aria-labelledby="join-h">
       <div class="container">
-        <div class="section-head"><h2 id="join-h">انضم للمجلس</h2><span class="muted">نرحّب بالطلبة المبادرين</span></div>
+        <div class="section-head"><h2 id="join-h">انضم للمجلس</h2><span class="muted">نرحّب بالمبادرين</span></div>
         <div class="card">
           <p>اختر أحد المسارات: تنظيم الفعاليات، الإعلام والاتصال، العلاقات الطلابية. سنعاود التواصل بعد الإرسال.</p>
           <div class="cta-row">
@@ -157,8 +127,7 @@
     </section>
   </main>
 
-  <!-- Footer -->
-  <footer aria-label="تذييل الموقع" id="contact">
+  <footer aria-label="تذييل الموقع">
     <div class="container foot">
       <div>
         <strong>مجلس طلاب خطوة – La Trobe</strong>
@@ -173,7 +142,6 @@
     document.getElementById('year').textContent = new Date().getFullYear();
     const btn=document.getElementById('menuBtn'),menu=document.getElementById('primary-menu');
     btn?.addEventListener('click',()=>{const o=menu.classList.toggle('open');btn.setAttribute('aria-expanded',String(o));});
-    document.querySelectorAll('a[href^="#"]').forEach(a=>{a.addEventListener('click',e=>{const el=document.querySelector(a.getAttribute('href'));if(!el)return;e.preventDefault();window.scrollTo({top:el.offsetTop-70,behavior:'smooth'});menu.classList.remove('open');btn.setAttribute('aria-expanded','false');});});
   </script>
 </body>
 </html>
