--- a/calendar.html
+++ b/calendar.html
@@ -1,6 +1,60 @@
 <!doctype html>
-<meta charset="utf-8">
-<meta http-equiv="refresh" content="0; url=/events.html">
-<link rel="canonical" href="/events.html">
-<title>Redirecting…</title>
-<p>يتم تحويلك إلى صفحة الفعاليات… <a href="/events.html">اضغط هنا إذا لم يتم التحويل</a>.</p>
+<html lang="ar" dir="rtl">
+<head>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <title>التقويم – Khotwa</title>
+  <style>
+    :root{--ring:#e5e7eb;--card:#f8fafc;--text:#0f172a;--muted:#6b7280}
+    *{box-sizing:border-box}body{margin:0;font-family:"Segoe UI",system-ui,-apple-system,Tahoma,Arial,sans-serif;color:var(--text)}
+    .container{width:min(1120px,92%);margin-inline:auto}
+    .navbar{position:sticky;top:0;background:#fff;border-bottom:1px solid var(--ring)}
+    .nav-inner{display:flex;justify-content:space-between;align-items:center;padding:.8rem 0}
+    .brand{display:flex;align-items:center;gap:.8rem;font-weight:700}
+    .brand .logo{width:28px;height:28px;object-fit:cover;border-radius:6px}
+    .nav-links{display:flex;gap:1rem}.nav-links a{padding:.5rem .75rem;border-radius:10px}.nav-links a:hover{background:var(--card)}
+    section{padding:2rem 0}.card{background:#fff;border:1px solid var(--ring);border-radius:16px;padding:1rem}
+    .muted{color:var(--muted)}
+    footer{border-top:1px solid var(--ring);padding:1rem 0;margin-top:1rem}
+  </style>
+</head>
+<body>
+  <nav class="navbar">
+    <div class="container nav-inner">
+      <a class="brand" href="/index.html">
+        <img src="https://g.top4top.io/p_3516rfttb1.jpg" alt="شعار مجلس طلاب خطوة" class="logo" width="28" height="28">
+        <span>مجلس طلاب خطوة – La Trobe</span>
+      </a>
+      <div class="nav-links">
+        <a href="/about.html">من نحن</a>
+        <a href="/news.html">الأخبار</a>
+        <a href="/events.html">الفعاليات</a>
+        <a href="/calendar.html">التقويم</a>
+        <a href="/contact.html">تواصل</a>
+      </div>
+    </div>
+  </nav>
+
+  <main class="container">
+    <section>
+      <h1>تقويم الفعاليات</h1>
+      <p class="muted">سيتم تحديث هذا القسم بجدول تفصيلي للفعاليات القادمة.</p>
+      <div class="card">
+        <ul style="margin:0;padding-right:1rem;line-height:1.9">
+          <li><strong>سبتمبر</strong>: ورشة تخصصات خطوة – 10/09</li>
+          <li><strong>سبتمبر</strong>: بطولة البادل – 24/09</li>
+          <li><strong>أكتوبر</strong>: ماراثون داخل الحرم – 01/10</li>
+        </ul>
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    <div class="container" style="display:flex;justify-content:space-between;gap:1rem;align-items:center">
+      <div class="muted">© <span id="year"></span> Khotwa Student Council</div>
+      <a href="https://www.instagram.com/khotwa.sc/" target="_blank" rel="noopener">Instagram</a>
+    </div>
+  </footer>
+  <script>document.getElementById('year').textContent=new Date().getFullYear();</script>
+</body>
+</html>
